--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -88,7 +88,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bindings-${{ matrix.settings.target }}
-          path: packages/oras-client/*.node
+          path: packages/oras-client/dist/generated/*.node
           if-no-files-found: error
 
   test:
