--- a/packages/oras-client/package.json
+++ b/packages/oras-client/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^18.0.0",
     "jest": "^29.7.0",
+    "@jest/globals": "^29.7.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.0.0"
   },
