--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -87,7 +87,12 @@ jobs:
 
       - name: Build (Windows - Git Bash)
         if: matrix.settings.host == 'windows-latest'
-        run: ${{ matrix.settings.build }}
+        run: |
+          echo "::remove-matcher owner=rust::"
+          echo "::remove-matcher owner=tsc::"
+          echo "::remove-matcher owner=npm::"
+          echo "::remove-matcher owner=pnpm::"
+          ${{ matrix.settings.build }}
         shell: 'C:\Program Files\Git\bin\bash.exe -lc'
         working-directory: packages\\oras-client
       - name: Upload artifact
