--- a/packages/oras-cli/package.json
+++ b/packages/oras-cli/package.json
@@ -34,7 +34,7 @@
     "artifacts"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/davidfestal/oras-client-node-bindings",
