--- a/packages/oras-client/package.json
+++ b/packages/oras-client/package.json
@@ -69,7 +69,7 @@
     "bindings"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/davidfestal/oras-client-node-bindings",
