--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -88,14 +88,9 @@ jobs:
 
       - name: Build (Windows - Git Bash)
         if: matrix.settings.host == 'windows-latest'
-        run: |
-          echo "::remove-matcher owner=rust::"
-          echo "::remove-matcher owner=tsc::"
-          echo "::remove-matcher owner=npm::"
-          echo "::remove-matcher owner=pnpm::"
-          ${{ matrix.settings.build }}
-        shell: 'C:\Program Files\Git\bin\bash.exe -lc'
+        run: ${{ matrix.settings.build }}
         working-directory: packages\\oras-client
+        
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
