--- a/packages/oras-client/package.json
+++ b/packages/oras-client/package.json
@@ -33,12 +33,12 @@
   "scripts": {
     "build:native": "napi build --platform --release && npm run move-native",
     "build:native:debug": "napi build --platform && npm run move-native",
-    "move-native": "shx mkdir -p src/generated dist && shx mv -f index.js index.d.ts src/generated/ && shx cp -f *.node src/generated/ && shx mv -f *.node dist/",
+    "move-native": "shx mkdir -p src/generated dist && shx mv -f index.js index.d.ts *.node src/generated/",
     "build:ts": "tsc && npm run copy-generated",
-    "copy-generated": "shx mkdir -p dist/generated && shx cp -f src/generated/*.js src/generated/*.d.ts dist/generated/ && shx cp -f dist/*.node dist/generated/",
+    "copy-generated": "shx mkdir -p dist/generated && shx cp -f src/generated/*.js src/generated/*.d.ts src/generated/*.node dist/generated/",
     "build": "npm run build:native && npm run build:ts",
     "build:debug": "npm run build:native:debug && npm run build:ts",
-    "clean": "shx rm -rf dist lib *.node",
+    "clean": "shx rm -rf dist/ src/generated/ target/",
     "prepublishOnly": "npm run clean && npm run build && napi prepublish -t npm",
     "artifacts": "napi artifacts",
     "test": "jest",
