--- a/packages/oras-client/package.json
+++ b/packages/oras-client/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "build:native": "napi build --platform --release && npm run move-native",
     "build:native:debug": "napi build --platform && npm run move-native",
-    "move-native": "shx mkdir -p src/generated && shx ls *.(js|d.ts|node) && shx mv -f index.js index.d.ts *.node src/generated/",
+    "move-native": "shx mkdir -p src/generated && shx ls \"*.(js|d.ts|node)\" && shx mv -f index.js index.d.ts *.node src/generated/",
     "build:ts": "tsc",
     "copy-generated": "shx mkdir -p dist/generated && shx ls src/generated/ && shx cp -f src/generated/*.js src/generated/*.d.ts src/generated/*.node dist/generated/",
     "build": "npm run build:native && npm run build:ts && npm run copy-generated",
