--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "echo 'Linting not configured yet'"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "shx": "^0.4.0",
     "typescript": "^5.0.0"
   },
