--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -80,6 +80,10 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       
+      - name: Install aarch64 cross-compiler for linux-arm64
+        if: ${{ matrix.settings.target == 'aarch64-unknown-linux-gnu' }}
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Build (Unix)
         if: matrix.settings.host != 'windows-latest'
         run: ${{ matrix.settings.build }}
