--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,6 @@ rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
 [target.aarch64-apple-darwin]
 rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
 
+# Linux ARM64 specific build configuration to fix linker issues
+[target.aarch64-unknown-linux-gnu]
+linker = "aarch64-linux-gnu-gcc"
