--- a/packages/oras-client/package.json
+++ b/packages/oras-client/package.json
@@ -45,7 +45,9 @@
     "test:watch": "jest --watch",
     "version": "napi version"
   },
-  "dependencies": {},
+  "dependencies": {
+    "tar": "^6.1.14"
+  },
   "devDependencies": {
     "@napi-rs/cli": "^2.18.0",
     "@types/jest": "^29.5.14",
@@ -53,7 +55,8 @@
     "jest": "^29.7.0",
     "@jest/globals": "^29.7.0",
     "ts-jest": "^29.4.5",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@types/tar": "^6.1.0"
   },
   "engines": {
     "node": ">= 10"
