Create npm folder
Signed-off-by: David Festal <dfestal@redhat.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -171,7 +171,7 @@ jobs:
       - name: Move artifacts
         working-directory: packages/oras-client
         run: |
-          pnpm napi prepublish -t npm
+          mkdir -p npm
           pnpm artifacts
       
       - name: Build TypeScript
