--- a/packages/oras-client/Cargo.toml
+++ b/packages/oras-client/Cargo.toml
@@ -7,16 +7,16 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-# Bump napi version to ensure compatibility with newer node/rust
-napi = { version = "2.16", features = ["async", "napi4", "tokio_rt"] }
-napi-derive = "2.16"
+# Upgraded to napi-rs 3.x to match @napi-rs/cli 3.4.1
+napi = { version = "3.0.0-alpha.11", features = ["async", "napi4", "tokio_rt"] }
+napi-derive = "3.0.0-alpha.11"
 oci-client = { version = "0.14", default-features = false, features = ["rustls-tls"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [build-dependencies]
-napi-build = "2.1"
+napi-build = "2"
 
 [profile.release]
 lto = true
